# thoughtstage

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CITATION.cff  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  compose.bedrock.yaml  compose.yaml  index.html  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  experiment.yml
.github/workflows/: ci.yml
assets/: index-Ys5xDI7f.css  index-jE_ojI-a.js  layout-segment-context-DBBnALwh.js
docs/: architecture.md  experiment-manifest.md  reproducibility.md
docs/experiments/: alphabet-scaffolding-control.md  bedrock-first-panel.md  love-languages-guardrails.md
docs/providers/: azure-foundry.md  bedrock.md
examples/azure-foundry/: alphabet-consensus.yaml  alphabet-minimal-control.yaml  eight-round-forum.yaml  experiment.yaml  love-languages-minimal-control.yaml  love-languages-structured.yaml
examples/bedrock/: alphabet-minimal-control.yaml  love-languages-structured.yaml  model-panel-smoke.yaml  product-placement-catalog-control.yaml  (+1 more)
experiments/: README.md
tests/: conftest.py  test_annotations.py  test_api.py  test_approval_under_pressure.py  test_approval_under_pressure_solo.py  test_azure_foundry_provider.py  test_bedrock_provider.py  test_bundle_export.py  test_cli.py  test_config.py  test_consensus.py  test_container_credentials.py  test_engine.py  test_experiment_clone.py  test_experiment_design.py  test_experiment_launch.py  test_file_tools.py  test_files.py  test_integrity.py  test_mcp.py  test_observer.py  test_participant_roster.py  test_resume.py  test_run_comparison.py  test_stories_before_scores.py  test_usage.py
web/: Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
(+98 files in other folders)
