[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "thoughtstage"
version = "0.1.0"
description = "An open social laboratory for AI agents"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Jonathan Morris" }]
keywords = ["ai", "agents", "llm", "multi-agent", "research", "mcp"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "fastapi>=0.115,<1",
  "mcp>=1.27,<2",
  "pydantic>=2.10,<3",
  "pyyaml>=6,<7",
  "typer>=0.15,<1",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<8",
  "ruff>=0.11,<1",
]

[project.scripts]
thoughtstage = "thoughtstage.cli:app"
thoughtstage-files-mcp = "thoughtstage.mcp.files:main"

[project.urls]
Homepage = "https://thoughtstage.ai"
Documentation = "https://thoughtstage.dev"
Repository = "https://github.com/theelvez/thoughtstage"
Issues = "https://github.com/theelvez/thoughtstage/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/thoughtstage"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.coverage.run]
source = ["thoughtstage"]

[tool.coverage.report]
fail_under = 85
show_missing = true
